...
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Fragment Container -->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintTop_toBottomOf="@id/bannerSilentMode" />

    <!-- Bottom Navigation Bar -->
...
